@@ -1,3 +1,7 @@
+Sat Jul 26 08:00:42 1997  Gary Houston  <ghouston@actrix.gen.nz>
+
+	* boot-9.scm (setenv): new procedure, scsh compatible.
+
 Sat Jul 26 21:30:10 1997  Marius Vollmer  <mvo@zagadka.ping.de>
 
 	* boot-9.scm (with-fluids): New macro to go with the
